# AoC2022

./: .gitignore  README.md
python/: README.md  pyproject.toml
python/code/: day1.py  day2.py  day3.py  day4.py
python/test/: answers.py  benchmarks.py  test_inputs.py  unit_tests.py
scala/: .gitignore  .scalafmt.conf  build.sbt
scala/src/main/scala/: Main.scala
scala/src/main/scala/days/: Day1.scala  Day2.scala
scala/src/main/scala/util/: FileReader.scala  PartNumber.scala  Solvable.scala
scala/src/test/scala/: TestInput.scala  UnitTests.scala
