[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["George https://github.com/GeorgeII"]
license = "MIT"
readme = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-benchmark = { version = "^4.0.0", extras = ["histogram"] }
flake8 = "^6.0.0"
black = "^22.10.0"
isort = "^5.10.1"


[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.black]
line_length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
